--- a/benchmarks/pyproject.toml
+++ b/benchmarks/pyproject.toml
@@ -10,25 +10,28 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "Apache License 2.0"}
 
-# Core dependencies - pinned to specific versions from pip list
+# Core dependencies - aligned for Torch 2.8 / CUDA 12.8 environments
 dependencies = [
-    "torch==2.5.1",
-    "transformers==4.52.0",
-    "ray==2.43.0",
-    "vllm==0.7.3",
-    "gradio==4.44.1",
+    "transformers==4.56.0",
+    "ray==2.48.0",
+    "vllm==0.11.0",
     "datasets==3.6.0",
     "safetensors==0.5.3",
     "numpy==1.26.4",
+    "pandas==2.2.3",
+    "pyarrow==18.1.0",
     "peft==0.15.2",
     "accelerate==1.8.1",
-    "bert_score",
-    "pyfiglet",
-    "pylatexenc",
-    "scikit-learn",
-    "vertexai",
-    "openai",
-    "anthropic"
+    "tokenizers==0.22.0",
+    "bert-score==0.3.13",
+    "scikit-learn==1.7.2",
+    "rich==13.9.4",
+    "tqdm==4.67.1",
+    "pyfiglet==1.0.4",
+    "pylatexenc==2.10",
+    "vertexai==1.71.1",
+    "openai==1.67.0",
+    "anthropic==0.75.0"
 ]
 
 [tool.setuptools]
